--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "dependencies": {
     "@prisma/client": "6.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -41,6 +44,7 @@
     "husky": "^9.1.7",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
